create_ec2/CreateEC2.tf
provider "aws" {
  profile = "default"
  region = "eu-west-2"
}

resource "aws_key_pair" "ubuntu" {
  key_name   = "ubuntu"
  public_key = file("key.pub")
}

resource "aws_security_group" "ubuntu" {
  name        = "ubuntu-security-group"
  description = "Allow HTTP, HTTPS and SSH traffic"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "FTP"
    from_port   = 21
    to_port     = 21
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "terraform"
  }
}


resource "aws_instance" "ubuntu" {
  key_name      = aws_key_pair.ubuntu.key_name
  ami           = "ami-005383956f2e5fb96"
  instance_type = "t2.micro"
  user_data = "${file("userdata.txt")}"

  tags = {
    Name = "ubuntu"
  }

  vpc_security_group_ids = [
    aws_security_group.ubuntu.id
  ]

  connection {
    type        = "ssh"
    user        = "ubuntu"
    private_key = file("key")
    host        = self.public_ip
  }

  ebs_block_device {
    device_name = "/dev/sda1"
    volume_type = "gp2"
    volume_size = 30
  }

  provisioner "remote-exec" {
    inline = [
	"sudo su -",
	"sudo apt update",
	"sudo apt install vsftpd -y",
	"sudo cp /etc/vsftpd.conf /etc/vsftpd.conf.orig",
	"sudo ufw allow 20:21/tcp",
	"sudo ufw allow 990/tcp",
	"sudo ufw allow 35000:40000/tcp",
	"sudo server="write_enable=YES"; sed -i "/^#$server/ c$server" /etc/vsftpd.conf",
	"sudo useradd ftpuser -m ",
	"sudo chpasswd << 'END'
	ftpuser:eohA3000!
	END",
	"sudo systemctl restart vsftpd",
    ]
  }

}

resource "aws_eip" "ubuntu" {
  vpc      = true
  instance = aws_instance.ubuntu.id
}
